[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PIdata"
version = "0.3.1"
authors = [
  { name="Venanzio Petrarolo", email="petrarolov@gmail.com" },
]
description = "An easy-to-use connector for the OSI PI historian"
readme = "README.md"
requires-python = ">=3.7"
keywords = [
    "OSI", 
    "PI", 
    "Connector", 
    "Historian", 
    "Process", 
    "Control", 
    "Automation", 
    "Engineering"
]
dependencies = [
    "pythonnet",
    "numpy",
    "pandas",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Petrarolo/PIdata"
Issues = "https://github.com/Petrarolo/PIdata/issues"